Multi-button dragging/editing glitches #40538

Closed
opened 2014-06-08 11:26:56 +02:00 by KiJeon · 13 comments

System Information
Windows 8

Blender Version
Broken: Both 2.70a & latest 2.70.5

Short description of error
Four glitches I've noticed for the wonderful patch [D270 ](https://developer.blender.org/D270). I'm not sure if somehow it's just me, but:

  1. "Dimensions" in Properties shelf:
  a. Dragging over XYZ then moving mouse side to side only affects X and Z values.
  b. Dragging over XYZ and entering a number doesn't take.
  1. Drag-selecting fields at a slight angle (instead of vertically) only changes the first value if not dragged enough.
  2. Same as above, but when dragged even less so that it asks for a value input, and you cancel out of it, the first value will still be changed.

Exact steps for others to reproduce the error
Each one should be self-explanatory.

**System Information** Windows 8 **Blender Version** Broken: Both 2.70a & latest 2.70.5 **Short description of error** Four glitches I've noticed for the wonderful patch [[D270](https://archive.blender.org/developer/D270) ](https://developer.blender.org/D270). I'm not sure if somehow it's just me, but: 1. "Dimensions" in Properties shelf: ``` a. Dragging over XYZ then moving mouse side to side only affects X and Z values. b. Dragging over XYZ and entering a number doesn't take. ``` 2. Drag-selecting fields at a slight angle (instead of vertically) only changes the first value if not dragged enough. 3. Same as above, but when dragged even less so that it asks for a value input, and you cancel out of it, the first value will still be changed. **Exact steps for others to reproduce the error** Each one should be self-explanatory.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @0o00o0oo

Added subscriber: @0o00o0oo

Added subscriber: @mont29

Added subscriber: @mont29

Note issue 1) is known (and hard to fix :/ ).

Note issue 1) is known (and hard to fix :/ ).

Added subscriber: @ideasman42

Added subscriber: @ideasman42
  1. Dimensions issue is known: #38587
  2. Intentional (needed to detect hoz/vertical motion switching)
  3. Is a bug.
1) Dimensions issue is known: #38587 2) Intentional (needed to detect hoz/vertical motion switching) 3) Is a bug.

This issue was referenced by c04c6a3b83

This issue was referenced by c04c6a3b8330901c12dc8c1695818497efa785cd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c04c6a3b83.

Closed by commit c04c6a3b83.
Author

Great, glad to see #3 fixed!
Though I'm not sure #2 isn't a bug. Maybe I should've clarified, but I meant to say the value registers even after the mouse is let go of.
Animated gif to showcase the problem:
Multi-button_glitch2.gif
I'm not sure if this is a difficult fix, but once multiple fields are selected, the values should all change, not just one.

Great, glad to see #3 fixed! Though I'm not sure #2 isn't a bug. Maybe I should've clarified, but I meant to say the value registers even after the mouse is let go of. Animated gif to showcase the problem: ![Multi-button_glitch2.gif](https://archive.blender.org/developer/F93637/Multi-button_glitch2.gif) I'm not sure if this is a difficult fix, but once multiple fields are selected, the values should all change, not just one.

@0o00o0oo. could you try with a recent build?
Multi-drag for number buttons now only changes button values once its finished detecting weather or not a vertical swipe gesture is made.

@0o00o0oo. could you try with a recent build? Multi-drag for number buttons now only changes button values once its finished detecting weather or not a vertical swipe gesture is made.
Author

Awesome, it behaves exactly as expected now!
I guess the only thing left is the difficult Dimensions issue.

BTW, my apologies for asking here, but I noticed a few contradictions in behavior between multi-dragging the fields and icons. Since it's not really a bug, where should I submit stuff like usability concerns/suggestions?

Awesome, it behaves exactly as expected now! I guess the only thing left is the difficult Dimensions issue. BTW, my apologies for asking here, but I noticed a few contradictions in behavior between multi-dragging the fields and icons. Since it's not really a bug, where should I submit stuff like usability concerns/suggestions?

@0o00o0oo: functionality discussion board,
http://lists.blender.org/mailman/listinfo/bf-funboard

Note, issue with Dimensions is not a bug in our buttons, the API to access this doesn't work properly setting multiple values at once.

@0o00o0oo: functionality discussion board, http://lists.blender.org/mailman/listinfo/bf-funboard Note, issue with `Dimensions` is not a bug in our buttons, the API to access this doesn't work properly setting multiple values at once.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40538
No description provided.