Fix T40538: Multi-button canceling edit-text could leave edited value